# QuteUIKit

./: CMakeLists.txt
App/: CMakeLists.txt  main.cpp  main.qml
UIKit/: CMakeLists.txt  StandardToggleButton.qml  qutecheckbox.cpp  qutecheckbox.h  trimmablepainterpath.cpp  trimmablepainterpath.h
